# python-opencv

./: pyproject.toml  readme.org
python_opencv/: __main__.py  opencv.py
tests/: test_python_opencv.py
