[tool.poetry]
name = "python-opencv"
version = "0.1.0"
description = ""
authors = ["Ioannis Canellos <iocanel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pytest-coverage = "^0.0"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
pybind11-stubgen = "^0.10.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pyright]
include = ["python_opencv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
